1999-02-05  Ettore Perazzoli  <ettore@comm2000.it>

	* gnome-dock-item.c (gnome_dock_item_motion): Retrieve the pointer
 	position in a sane way.

	* gnome-dock.c: Reverted Jaka's changes of 1999-02-04.
	(drag_motion): If everything fails, move the item on its own band
 	according to the current pointer position instead of just doing
 	nothing.
	(drag_check): Removed `NEW_BAND_SNAP' hack.  Use the
 	`drag_allocation' instead of the `allocation' of the band for
 	doing the comparisons.  Check against the band only if
 	`new_for_drag' is false.  If we are in the upper/leftmost half and
 	dragging into the band fails, try to create a new band.
	(drag_new): Set `new_for_drag' in the new band to TRUE.

	* gnome-dock-band.c (gnome_dock_band_drag_begin): Copy the current
 	allocation into `drag_allocation'.
	(gnome_dock_band_init): Initialize `max_space_requisition',
 	`tot_offsets' and `new_for_drag'.  Set `drag_allocation' to { -1,
 	-1, 0, 0 }.
	(gnome_dock_band_drag_end): Set `new_for_drag' to FALSE.
	
	* gnome-dock-band.h (struct _GnomeDockBand): New members
 	`drag_allocation' and `new_for_drag'.

1999-02-05  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* gnome-messagebox.c (gnome_message_box_new): Use
	gnome-default-dlg.png, not gnome-default.png (there was a file
	clash with gnome-core).

1999-02-05  Martin Baulig  <martin@home-of-linux.org>

	* gnome-app.c (gnome_app_set_statusbar_custom): New function taking
	both a container and a statusbar widget.

Thu Feb 04 22:56:28 1999  George Lebl  <jirka@5z.com>

	* gnome-dentry-edit.c: use set_icon method of icon entry as setting
	  the text of the entry now doesn't work (this was probably an
	  unwanted side effect of it's recent makeover)

	* gnome-icon-entry.c: accept NULL for the set_icon method

Thu Feb 04 22:45:45 1999  George Lebl  <jirka@5z.com>

	* gnome-icon-entry.c: switch order of two functions to avoid
	  warning

Thu Feb 04 19:10:38 1999  George Lebl  <jirka@5z.com>
